--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body {
     color: white;
     text-decoration: none;
     font-size: 18px;
-    display: block;
+    display: flex;
 }
 
 .sidebar ul li a:hover {
